# Gumus_Dil

./: .gitignore  CONTRIBUTING.md  GUVENLIK_RAPORU.md  LICENSE  MEMORY_MANAGEMENT_IMPROVEMENTS.md  MILESTONE_ACHIEVEMENT.md  Modelfile  PARDUS_KURULUM.md  PARDUS_OGRETMEN_KILAVUZU.md  PARDUS_PROJE_BILGISI.md  PARDUS_TEKNOFEST.md  README.md  STABILITY_IMPROVEMENTS.md  TEKNOFEST_DEMO.md  TEKNOFEST_JURI_HAZIRLIGI.md  TEST_IMPROVEMENTS_REPORT.md  app_log.txt  build_log.txt  build_pardus_package.sh  crash_log.txt  diag_dll.py  diag_pe.py  gumusdil_dataset.jsonl  gumusdil_teknik_denetimi.md  modern_syntax_results.txt  pardus_system_integration.sh  replace.py  runner.py  sehir_plani.ghf  setup_pardus.sh  single_results.txt  single_test.tr  test_editor.py  test_results.txt  test_tags.py  test_typing.py
docs/: BELLEK_HARITASI_KOD_ANALIZI.md  COP_TOPLAYICI_UYGULAMA_OZETI.md  DEBUGGER_README.md  DIL_YOL_HARITASI.md  GC_IMPLEMENTATION_SUMMARY.md  GC_TEKNOFEST_ANALIZ.md  GORSELLESTIRME_ANALIZI.md  GUMUSDIL_SOZLUGU.md  GUMUS_BAGLANTI.md  GUMUS_BAGLANTI_DIAGRAM.txt  GUMUS_REHBER.md  HATA_AYIKLAYICI_OKUBENI.md  HATA_AYIKLAYICI_REHBERI.md  IDE_KULLANIM_KILAVUZU.md  JURI_SAVUNMA_HAFIZA.md  KULLANIM_KILAVUZU.md  KUTUPHANE_REHBERI.md  MEMORY_ANALYSIS.md  MIMARI_KOMUTLAR_DUZELTILDI.md  MIMARI_UYGULAMA_TAMAMLANDI.md  MIMARI_VISUALIZATION_DESIGN.md  PRO_OZELLIKLER.md  SADECE_TURKCE.md  TURKCELESTIRME_RAPORU.md  TURKCE_KARAKTER_DESTEGI.md  VISUALIZATION_ANALYSIS.md  YOL_COZUMLEME_DUZELTMELERI.md
lib/: VERI_YAPILARI_CHEATSHEET.md  VERI_YAPILARI_KOPYA_KAGIDI.md  VERI_YAPILARI_OKUBENI.md  VERI_YAPILARI_README.md  ag.tr  ai_gelis.tr  arsiv.tr  birim.tr  coklu_islem.tr  db_yonetimi.tr  donanim.tr  dosya.tr  finans.tr  gorev.tr  grafik_3d.tr  grafik_basit.tr  guvenlik.tr  guvenlik_pro.tr  internet.tr  istatistik_gelismis.tr  matematik.tr  metin.tr  metin_gelismis.tr  mimar.tr  muzik.tr  oyun_gelismis.tr  pardus_sistem.tr  python_bag.tr  robotik.tr  sifreleme.tr  sistem.tr  veri_yapilari.tr  veribilimi.tr  zaman_yonetimi.tr
lib/donanim_lojik/: sensor.tr
lib/oyun/: oyun_motoru.tr
lib/veri/: donusturucu.tr  istatistik.tr  metin.tr
ornekler/: GumusLojistik_Ultra.tr  gece_lambasi.tr  gumus_kale_savunma.tr  hacker_simulator.tr  hiz_testi.tr  import_testi.gd  matematik.gd  memory_visualization_demo.tr  pardus_entegrasyon.tr  pardus_sistem_rehberi.tr  robot_otonom_engel.tr  sayi_tahmin_pro.tr  senfoni_gumus.tr  syntax_test.tr  veri_analizi_demo.tr
ornekler/GumusLojistik/: grafik.tr  lojistik_final_rapor.txt  veritabani.tr  zeka.tr
ornekler/basit_ornekler/: 01_selam.tr  02_vki.tr  03_tek_cift.tr  04_asal_sayilar.tr  05_fibonacci.tr  06_carpim_tablosu.tr  07_ogrenci_not.tr  08_metin_ters.tr  09_sesli_harf.tr  10_sezar_sifre.tr  11_hesap_makinesi.tr  OKU_BENI.md  README.md  bağlı_liste.tr  veri_yapilari_ornekler.tr  voxel_ornekler.tr
packaging/pardus/DEBIAN/: control  postinst
plugins/: gumus_zeka.py  hazir_kodlar.py  merhaba_dunya.py
scripts/: IDE_BASLAT.bat  IDE_OGRENCI.bat  clean.bat  compile_temp.bat  derle_duzgun.bat  derle_profesyonel.bat  derle_turkce.bat  final_turkce_temizlik.ps1  gumus_derle.bat  turkce_guncelle.ps1  turkce_guncelle_tum.ps1
scripts/windows/: GUMUS_DERLE.bat  gumus_ide.bat  kurulum_sihirbazi.ps1  run_tests.bat  run_unit_tests.bat
src/: check_ast.py  check_transpiler.py  ornek_iha_takip.tr  test_reverse_transpiler.py
src/arduino/: GumusFirmware.ino
src/compiler/: debug.h  debug_globals.cpp  debug_server.h  json_hata.h  lsp_server.cpp  lsp_server.h  main.cpp
src/compiler/codegen/: bytecode_generator.cpp  bytecode_generator.h
src/compiler/hardware/: serial_port.cpp  serial_port.h
src/compiler/interpreter/: error_suggestion.cpp  error_suggestion.h  expression_evaluator.h  garbage_collector.cpp  garbage_collector.h  gc_integration.cpp  interpreter.cpp  interpreter.h  native_functions.cpp  native_functions.h  objects.cpp  property_handlers.cpp  property_handlers.h  statement_executor.h  value.cpp  value.h
src/compiler/ir/: ast_to_ir.cpp  ast_to_ir.h  ir_instruction.cpp  ir_instruction.h
src/compiler/lexer/: token.h  tokenizer.cpp  tokenizer.h
src/compiler/optimizer/: advanced_passes.cpp  advanced_passes.h  constant_folding.cpp  constant_folding.h  dead_code_elimination.cpp  dead_code_elimination.h  optimizer.cpp  optimizer.h
src/compiler/parser/: arena.h  (+11 more)
src/ide/: OKU_BENI.md  config.py  main.py  requirements.txt
std_lib/: ag_istemci.tr  dosya.tr  io.tr  liste.tr  matematik.tr  metin.tr  mqtt.tr  rastgele.tr  sistem.tr  zaman.tr
std_lib/sistem/: renk.tr
tests/: CMakeLists.txt  CMakeLists_enhanced.txt  CMakeLists_memory_tests.txt  OKU_BENI.md  README.md  TEST_OZETI.md  TEST_SUMMARY.md  animasyon.tr  basit_test.tr  bilgi_yarismasi.tr  comprehensive_test.tr  cpp_test_improvements.cpp  demo_degisken.tr  demo_girdi_kullanimi.tr  demo_program.tr  encoding_test.tr  hata_test.tr  hesap_makinesi.tr  ide_demo.tr  ide_final.tr  ide_test.tr  ide_test_for.tr  ide_test_v2.tr  kutuphane_test.tr  matematik.tr  memory_test.tr  mini_test.tr  minimal_if.tr  minimal_logic.tr  minimal_loop.tr  minimal_try.tr  mqtt_mock.tr  not_defteri.tr  pro_memory_test.tr  pro_test.tr  run_enhanced_tests.py  run_memory_tests.py  run_tests.bat  run_tests.sh  sayi_tahmin.tr  (+40 more)
tests/integration/: test_compiler_pipeline.cpp  test_ide_compiler_integration.cpp
tests/old_tests/: test_ascii.tr  test_func.tr  test_if.tr  test_modern.tr  test_probe.txt  test_simple.tr  test_step.tr  test_suggestion.gumus  test_suggestion3.gumus
tests/pardus/: test_pardus_full.sh  test_pardus_install.sh
tests/performance/: test_performance_benchmarks.cpp
tests/programs/: baslat.tr  paralel.tr  simple_test.tr  test.gumus  test_transpiler.tr
tests/scripts/: get_ast.py  test_ast_output.py  test_gumus_zeka.py  test_simple.py  test_transpiler.py  test_ui_terminal_app.py
tests/stability/: test_error_recovery.py
tests/unit/: test_bytecode_generator.cpp  test_garbage_collector.cpp  test_interpreter.cpp  test_memory_management.cpp  test_optimizer_advanced.cpp  test_parser.cpp  test_vm.cpp  test_vm_enhanced.cpp
(+121 files in other folders)
